--- a/Inicio.html
+++ b/Inicio.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/Acesso.css">
+    <link rel="stylesheet" href="/css/NavBar.css">
+    <link rel="stylesheet" href="/css/Inicio.css">
     <link rel="icon" href="/img/logoRemasterizado.png">
-    <title>TuneBox</title>
+    <title>TuneBox | Inicio</title>
+    <script src="/JS/Acesso.js" ></script>
 </head>
 
 
@@ -16,29 +18,28 @@
             <img src="/img/icons8-lista-32.png" alt="Lista">
         </button>
         <div class="logo_header">
-            <img src="/img/logoRemasterizado.png" class="img_logo_header" alt="logo tuneBox">
+            <a href="Inicio.html">
+            <img src="/img/Captura de tela 2023-04-14 145459.png"  class="img_logo_header" alt="logo tuneBox">
+        </a>
         </div>
         <div class="navigation_header" id="navigation_header">
             <button onclick="openMenu()" class="btn_icon_header">
                 <img src="/img/icons8-fechar-32.png" alt="Fechar">
             </button>
-            <a href="#" class="active">Cadastro</a>
-            <a href="#" class="active">Acessar</a>
-            <a href="#" class="active">Esqueceu sua senha</a>
-            <a href="#" class="active">Quem somos?</a>
+            <a href="Cadastro.html" class="active">Cadastro</a>
+            <a href="Acessar.html" class="active">Acessar</a>
+            <a href="Password.html" class="active">Esqueceu sua senha</a>
+            <a href="Conteudo.html" class="active">Quem somos?</a>
             <a href="#" class="active">Sair</a>
         </div>
     </div>
-    <div tabindex="0" onclick="closeSidebar()" class="conteudo" id="conteudo">
+    <div tabindex="0" onclick="closeSidebar()" class="Inicio" id="Inicio">
         <h1>Aqui será a pagina de acesso ao site, onde o usuário vai decidir o que fazer </h1>
     </div>
-   
-</body>
-
 <script>
-var header = document.getElementById('header');
+    var header = document.getElementById('header');
 var navigationHeader = document.getElementById('navigation_header');
-var conteudo = document.getElementById('conteudo');
+var Inicio = document.getElementById('Inicio');
 var showSidebar = true;
 
 function openMenu(){
@@ -46,12 +47,12 @@ function openMenu(){
     if(showSidebar){
         navigationHeader.style.marginLeft = '-10vw';
         navigationHeader.style.animationName = 'showSidebar';
-        conteudo.style.filter = 'blur(2px)';
+        Inicio.style.filter = 'blur(2px)';
     }
     else {
         navigationHeader.style.marginLeft = '-100vw';
         navigationHeader.style.animationName = '';
-        conteudo.style.filter = '';
+        Inicio.style.filter = '';
     }
 }
 
@@ -66,5 +67,6 @@ window.addEventListener('resize', function(event) {
         openMenu();
     }
 });
+
 </script>
-</html>
+</body>
