adicionado campo para pagamentos

--- a/Acessar.html
+++ b/Acessar.html
@@ -12,6 +12,7 @@
 
 
 <body>
+    <div class="">
     <div class="header" id="header">
         <button onclick="openMenu()" class="btn_icon_header">
             <img src="/img/icons8-lista-32.png" alt="Lista">
@@ -28,9 +29,11 @@
             <a href="Cadastro.html" class="active">Cadastro</a>
             <a href="Password.html" class="active">Esqueceu sua senha</a>
             <a href="Conteudo.html" class="active">Quem somos?</a>
+            <a href="Premiun.html" class="active">Premiun</a>
             <a href="Sair.html" class="active">Sair</a>
         </div>
     </div>
+</div>
     <div tabindex="0" onclick="closeSidebar()" class="Acessar" id="Acessar">
         <h1>acessar</h1>
     </div>
