--- a/Cadastro.html
+++ b/Cadastro.html
@@ -28,6 +28,7 @@
             <a href="Acessar.html" class="active">Acessar</a>
             <a href="Password.html" class="active">Esqueceu sua senha</a>
             <a href="Conteudo.html" class="active">Quem somos?</a>
+            <a href="Premiun.html" class="active">Premiun</a>
             <a href="Sair.html" class="active">Sair</a>
         </div>
     </div>
