--- a/Inicio.html
+++ b/Inicio.html
@@ -29,6 +29,7 @@
             <a href="Cadastro.html" class="active">Cadastro</a>
             <a href="Acessar.html" class="active">Acessar</a>
             <a href="Password.html" class="active">Esqueceu sua senha</a>
+            <a href="Premiun.html" class="active">Premiun</a>
             <a href="Conteudo.html" class="active">Quem somos?</a>
             <a href="#" class="active">Sair</a>
         </div>
