--- a/Conteudo.html
+++ b/Conteudo.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/NavBar.css">
     <link rel="stylesheet" href="/css/Conteudo.css">
     <link rel="icon" href="/img/logoRemasterizado.png">
@@ -29,6 +31,7 @@
             <a href="Cadastro.html" class="active">Cadastro</a>
             <a href="Acessar.html" class="active">Acessar</a>
             <a href="Password.html" class="active">Esqueceu sua senha</a>
+            <a href="Premiun.html" class="active">Premiun</a>
             <a href="Sair.html" class="active">Sair</a>
         </div>
     </div>
@@ -53,15 +56,18 @@
             <hr>
             <div class="container">
                 <div>
-                <h2>Quem somos? </h2> 
-                <p>TuneBox Music é um website de streaming de músicas que utiliza a API do YouTube para fornecer
-                    conteúdo aos usuários. O site possui uma interface amigável e oferece funcionalidades como cadastro
-                    de usuários, login e recuperação de senha. É uma plataforma voltada para o público em geral, com o
-                    objetivo de oferecer uma ampla variedade de músicas disponíveis para audição a qualquer momento. Com
-                    o TuneBox Music, os usuários podem descobrir novas músicas, criar playlists personalizadas e
-                    desfrutar de uma experiência musical de alta qualidade.</p>
+                    <h2>Quem somos? </h2>
+                    <p>TuneBox Music é um website de streaming de músicas que utiliza a API do YouTube para fornecer
+                        conteúdo aos usuários. O site possui uma interface amigável e oferece funcionalidades como
+                        cadastro
+                        de usuários, login e recuperação de senha. É uma plataforma voltada para o público em geral, com
+                        o
+                        objetivo de oferecer uma ampla variedade de músicas disponíveis para audição a qualquer momento.
+                        Com
+                        o TuneBox Music, os usuários podem descobrir novas músicas, criar playlists personalizadas e
+                        desfrutar de uma experiência musical de alta qualidade.</p>
                 </div>
-                    <img src="/img/squadFake.jpg" alt="squadFake">
+                <img src="/img/squadFake.jpg" alt="squadFake">
             </div>
             <br>
             <br>
@@ -104,4 +110,9 @@
         });
 
     </script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </body>
