--- a/Conteudo.html
+++ b/Conteudo.html
@@ -39,7 +39,7 @@
         <div class="cont1" id="cont1">
             <div class="titulo" id="titulo">
                 <h1>TuneBox Music</h1>
-                <p>Web site de músicas online!</p>
+                <p1>Web site de músicas online!</p1>
                 <br>
                 <hr>
                 <br>
@@ -51,10 +51,9 @@
                     entrar em contato conosco. Estamos sempre felizes em ajudar nossos usuários a aproveitar ao máximo
                     nosso site de música.</p>
             </div>
-            <br>
-            <br>
+
             <hr>
-            <div class="container">
+            <div class="container" id="container">
                 <div>
                     <h2>Quem somos? </h2>
                     <p>TuneBox Music é um website de streaming de músicas que utiliza a API do YouTube para fornecer
@@ -72,9 +71,29 @@
             <br>
             <br>
             <hr>
+
+            <div class="container01" id="conteiner01">
+
+                <img src="/img/pexels-cottonbro-studio-3693108.jpg" alt="Music">
+
+
+                <p>A equipe desenvolvedora criou uma plataforma de músicas online, permitindo aos usuários ouvir suas
+                    músicas favoritas em qualquer lugar e a qualquer hora. A plataforma oferece recursos como criação de
+                    playlists, recomendações personalizadas, recursos de pesquisa e compartilhamento de músicas com
+                    amigos. O desenvolvimento da plataforma envolveu uma equipe de desenvolvedores de software,
+                    incluindo designers de interface de usuário, programadores de back-end e especialistas em segurança
+                    cibernética. Eles trabalharam juntos para criar uma plataforma robusta e fácil de usar, que
+                    oferecesse uma experiência de usuário excepcional para todos os usuários.</p>
+
+            </div>
+
+            <br>
+            <br>
         </div>
 
+
     </div>
+
 
 
     <script>
@@ -111,8 +130,14 @@
 
     </script>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 
 </body>
