--- a/Acessar.html
+++ b/Acessar.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/css/NavBar.css">
     <link rel="stylesheet" href="/css/Acessar.css">
     <link rel="icon" href="/img/logoRemasterizado.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  
     <title>Acessar | TuneBox</title>
 </head>
 
@@ -35,11 +40,43 @@
     </div>
 </div>
     <div tabindex="0" onclick="closeSidebar()" class="Acessar" id="Acessar">
-        <h1>acessar</h1>
+      
+        <form onsubmit="mostrarAlerta(); event.preventDefault();">
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+              <div class="col-sm-6">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Login</h5>
+                    <form>
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">Endereço de Email</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu email...">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputPassword1">Senha</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Digite sua senha...">
+                      </div>
+                      <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
     </div>
    
 
     <script>
+
+function mostrarAlerta() {
+  alert("Login efetuado com sucesso!");
+  alert("Você será redirecionado para página de inicio")
+  window.location.href = "Inicio.html";
+}
+
+
         var header = document.getElementById('header');
     var navigationHeader = document.getElementById('navigation_header');
     var Acessar = document.getElementById('Acessar');
