--- a/Cadastro.html
+++ b/Cadastro.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="/css/NavBar.css">
     <link rel="stylesheet" href="/css/Cadastro.css">
     <link rel="icon" href="/img/logoRemasterizado.png">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
     <title>Cadastro | TuneBox</title>
 </head>
 
@@ -33,7 +39,33 @@
         </div>
     </div>
     <div tabindex="0" onclick="closeSidebar()" class="Cadastro" id="Cadastro">
-        <h1>cadastro </h1>
+        <div class="container mt-5">
+            <h2>Cadastro de Usuário</h2>
+            <form action="#" method="post">
+              <div class="form-group">
+                <label for="nome">Nome completo:</label>
+                <input type="text" class="form-control" id="nome" name="nome" required>
+              </div>
+              <div class="form-group">
+                <label for="email">E-mail:</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+              </div>
+              <div class="form-group">
+                <label for="senha">Senha:</label>
+                <input type="password" class="form-control" id="senha" name="senha" required>
+              </div>
+              <div class="form-group">
+                <label for="conf-senha">Confirme sua senha:</label>
+                <input type="password" class="form-control" id="conf-senha" name="conf-senha" required>
+              </div>
+              <div class="form-group form-check">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="checkbox" name="termos" required> Li e concordo com os termos de uso.
+                </label>
+              </div>
+              <button type="submit" class="btn btn-primary">Cadastrar</button>
+            </form>
+          </div>
     </div>
    
 
